syntax = "proto3";

package web3;

service Web3 {
    // RPC interface.
    rpc CallContract (CallContractRequest) returns (CallContractResponse) {}

    // Wait for given contract request to be processed.
    rpc WaitContractCall (WaitContractCallRequest) returns (WaitContractCallResponse) {}
}

message CallContractRequest {
    // Raw contract request payload that will be passed to the
    // contract (Protocol Buffers serialized).
    bytes payload = 1;
}

message CallContractResponse {
    // Raw contract dependent response payload (Protocol Buffers serialized).
    bytes payload = 1;
}

message WaitContractCallRequest {
    // Identifier of the contract call to wait for. The identifier is the hash
    // of the contract call.
    bytes call_id = 1;
}

message WaitContractCallResponse {
    // Contract call output.
    bytes output = 1;
}
